data/derived/sp14/progs/unify/prog2077.ml.out
Characters 107-118:
  then (0, 1::acc)
       ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
